@@ -159,6 +159,56 @@ struct dataset_data {
 };
 }
 
+namespace ns_SrcEventCode_v0 {
+struct dataset_data {
+  static hdf5pp::Type native_type();
+  static hdf5pp::Type stored_type();
+
+  dataset_data();
+  dataset_data(const Psana::EvrData::SrcEventCode& psanaobj);
+  ~dataset_data();
+
+  uint16_t code;
+  uint32_t period;
+  uint32_t maskTriggerP;
+  uint32_t maskTriggerR;
+  char* desc;
+  uint16_t readoutGroup;
+
+  operator Psana::EvrData::SrcEventCode() const { return Psana::EvrData::SrcEventCode(code, period, maskTriggerP, maskTriggerR, desc, readoutGroup); }
+
+};
+}
+class Proxy_SrcEventCode_v0 : public PSEvt::Proxy<Psana::EvrData::SrcEventCode> {
+public:
+  typedef Psana::EvrData::SrcEventCode PsanaType;
+
+  Proxy_SrcEventCode_v0(hdf5pp::Group group, hsize_t idx) : m_group(group), m_idx(idx) {}
+  virtual ~Proxy_SrcEventCode_v0() {}
+
+protected:
+
+  virtual boost::shared_ptr<PsanaType> getTypedImpl(PSEvt::ProxyDictI* dict, const Pds::Src& source, const std::string& key);
+
+private:
+
+  mutable hdf5pp::Group m_group;
+  hsize_t m_idx;
+  boost::shared_ptr<PsanaType> m_data;
+};
+boost::shared_ptr<PSEvt::Proxy<Psana::EvrData::SrcEventCode> > make_SrcEventCode(int version, hdf5pp::Group group, hsize_t idx);
+
+/// Store object as a single instance (scalar dataset) inside specified group.
+void store(const Psana::EvrData::SrcEventCode& obj, hdf5pp::Group group, int version = -1);
+/// Create container (rank=1) datasets for storing objects of specified type.
+void make_datasets(const Psana::EvrData::SrcEventCode& obj, hdf5pp::Group group, const ChunkPolicy& chunkPolicy,
+                   int deflate, bool shuffle, int version = -1);
+/// Add one more object to the containers created by previous method at the specified index,
+/// negative index means append to the end of dataset. If pointer to object is zero then
+/// datsets are extended with zero-filled of default-initialized data.
+void store_at(const Psana::EvrData::SrcEventCode* obj, hdf5pp::Group group, long index = -1, int version = -1);
+
+
 namespace ns_OutputMap_v0 {
 struct dataset_data {
   static hdf5pp::Type native_type();
@@ -666,6 +716,63 @@ void make_datasets(const Psana::EvrData::ConfigV7& obj, hdf5pp::Group group, con
 /// negative index means append to the end of dataset. If pointer to object is zero then
 /// datsets are extended with zero-filled of default-initialized data.
 void store_at(const Psana::EvrData::ConfigV7* obj, hdf5pp::Group group, long index = -1, int version = -1);
+
+
+namespace ns_SrcConfigV1_v0 {
+struct dataset_config {
+  static hdf5pp::Type native_type();
+  static hdf5pp::Type stored_type();
+
+  dataset_config();
+  dataset_config(const Psana::EvrData::SrcConfigV1& psanaobj);
+  ~dataset_config();
+
+  uint32_t neventcodes;
+  uint32_t npulses;
+  uint32_t noutputs;
+
+
+};
+}
+
+
+class SrcConfigV1_v0 : public Psana::EvrData::SrcConfigV1 {
+public:
+  typedef Psana::EvrData::SrcConfigV1 PsanaType;
+  SrcConfigV1_v0() {}
+  SrcConfigV1_v0(hdf5pp::Group group, hsize_t idx)
+    : m_group(group), m_idx(idx) {}
+  virtual ~SrcConfigV1_v0() {}
+  virtual uint32_t neventcodes() const;
+  virtual uint32_t npulses() const;
+  virtual uint32_t noutputs() const;
+  virtual ndarray<const Psana::EvrData::SrcEventCode, 1> eventcodes() const;
+  virtual ndarray<const Psana::EvrData::PulseConfigV3, 1> pulses() const;
+  virtual ndarray<const Psana::EvrData::OutputMapV2, 1> output_maps() const;
+private:
+  mutable hdf5pp::Group m_group;
+  hsize_t m_idx;
+  mutable boost::shared_ptr<EvrData::ns_SrcConfigV1_v0::dataset_config> m_ds_config;
+  void read_ds_config() const;
+  mutable ndarray<const Psana::EvrData::SrcEventCode, 1> m_ds_eventcodes;
+  void read_ds_eventcodes() const;
+  mutable ndarray<const Psana::EvrData::PulseConfigV3, 1> m_ds_pulses;
+  void read_ds_pulses() const;
+  mutable ndarray<const Psana::EvrData::OutputMapV2, 1> m_ds_output_maps;
+  void read_ds_output_maps() const;
+};
+
+boost::shared_ptr<PSEvt::Proxy<Psana::EvrData::SrcConfigV1> > make_SrcConfigV1(int version, hdf5pp::Group group, hsize_t idx);
+
+/// Store object as a single instance (scalar dataset) inside specified group.
+void store(const Psana::EvrData::SrcConfigV1& obj, hdf5pp::Group group, int version = -1);
+/// Create container (rank=1) datasets for storing objects of specified type.
+void make_datasets(const Psana::EvrData::SrcConfigV1& obj, hdf5pp::Group group, const ChunkPolicy& chunkPolicy,
+                   int deflate, bool shuffle, int version = -1);
+/// Add one more object to the containers created by previous method at the specified index,
+/// negative index means append to the end of dataset. If pointer to object is zero then
+/// datsets are extended with zero-filled of default-initialized data.
+void store_at(const Psana::EvrData::SrcConfigV1* obj, hdf5pp::Group group, long index = -1, int version = -1);
 
 
 namespace ns_FIFOEvent_v0 {
